--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             style="font-size: 0.8rem !important; padding: 5px; margin-top: 5%"
           >
             Para pesquisar um jogador já cadastrado, digite a primeira letra do
-            nome. Caso contrário Digite o nome do jogador e clique em Adicionar:
+            nome. Caso contrário Digite o nome do jogador e clique em AdicionaR:
           </p>
 
           <div
