--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <!-- Links à direita -->
         <ul class="navbar-nav d-flex flex-row">
           <li class="nav-item me-3">
-            <a class="nav-link" href="#"
+            <a class="nav-link" href="ranking/index.php" target="_blank"
               ><i class="fa-solid fa-trophy"></i> Ranking</a
             >
           </li>
@@ -108,7 +108,8 @@
             style="font-size: 0.8rem !important; padding: 5px; margin-top: 5%"
           >
             Para pesquisar um jogador já cadastrado, digite a primeira letra do
-            nome. Caso contrário Digite o nome do jogador e clique em AdicionaR:
+            nome. Caso contrário Digite o nome do jogador e clique para
+            adicionar:
           </p>
 
           <div
