--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <!-- Links à direita -->
         <ul class="navbar-nav d-flex flex-row">
           <li class="nav-item me-3">
-            <a class="nav-link" href="ranking/index.php" target="_blank"
+            <a class="nav-link" href="ranking" target="_blank"
               ><i class="fa-solid fa-trophy"></i> Ranking</a
             >
           </li>
