--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <i class="fa-solid fa-plus"></i> Adicionar jogador
             </button>
           </div>
-
+<hr/ style="width: 50%; margin: 0 auto; border-top: 1px solid #a2a2a2; margin-bottom: 8%;">
           <button
             class="pushable"
             onclick="sortTeams()"
